--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,8 @@
+<div class="row">
+  
+
 <%= form_for(task) do |f| %>
- <% if task.errors.any? %>
+  <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
         <% task.errors.full_messages.each do |task| %>
@@ -8,12 +11,16 @@
       </ul>
     </div>
   <% end %>
+  
+    <div class="form-group col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+      <%= f.label :status, 'ステータス' %>
+      <%= f.text_field :status, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+      <%= f.label :content, 'タスク名' %>
+      <%= f.text_field :content, class: 'form-control' %>
+    </div>
 
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
-
-  <%= f.label :content, 'タスク名' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '追加' %>
+  <%= f.submit '追加', class: 'btn btn-primary btn-block' %>
 <% end %>
