--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,10 @@
         </button>
         <a class="navbar-brand" href="/">Tasklist</a>
       </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Signup', signup_path %></li>
+        <li><%= link_to 'Login', login_path %></li>
+      </ul>
     </div>
   </nav>
 </header>
