--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   
-
+<form class="form-horizontal col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
@@ -12,15 +12,16 @@
     </div>
   <% end %>
   
-    <div class="form-group col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="form-group">
       <%= f.label :status, 'ステータス' %>
       <%= f.text_field :status, class: 'form-control' %>
     </div>
     
-    <div class="form-group col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="form-group">
       <%= f.label :content, 'タスク名' %>
       <%= f.text_field :content, class: 'form-control' %>
     </div>
 
-  <%= f.submit '追加', class: 'btn btn-primary btn-block' %>
+  <%= f.submit '追加', class: 'btn btn-primary' %>
 <% end %>
+</form>
