--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
   
-<form class="form-horizontal col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
@@ -11,7 +10,8 @@
       </ul>
     </div>
   <% end %>
-  
+    
+  <form class="form-horizontal col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
     <div class="form-group">
       <%= f.label :status, 'ステータス' %>
       <%= f.text_field :status, class: 'form-control' %>
@@ -21,7 +21,10 @@
       <%= f.label :content, 'タスク名' %>
       <%= f.text_field :content, class: 'form-control' %>
     </div>
-
-  <%= f.submit '追加', class: 'btn btn-primary' %>
+    
+    <div class="form-group">
+      <%= f.submit '追加', class: 'btn btn-primary' %>
+    </div>
+  </form>
+  
 <% end %>
-</form>
