--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
     
-  <form class="form-horizontal col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+  <div class="col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
     <div class="form-group">
       <%= f.label :status, 'ステータス' %>
       <%= f.text_field :status, class: 'form-control' %>
@@ -25,6 +25,6 @@
     <div class="form-group">
       <%= f.submit '追加', class: 'btn btn-primary' %>
     </div>
-  </form>
+  </div>
   
 <% end %>
