--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,18 @@
-<h1>タスク新規作成ページ</h1>
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
 
-<%= render 'form', task: @task %>
+  <h1>タスク新規作成ページ</h1>
 
-<%= link_to '一覧に戻る', tasks_path %>
+  <%= render 'form', task: @task %>
+
+  <%= link_to '一覧に戻る', tasks_path %>
+  
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to Tasklist</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
+
